--- a/.github/workflows/hexlet-lint.yml
+++ b/.github/workflows/hexlet-lint.yml
@@ -2,33 +2,19 @@ name: linter check
 
 on:
   - push
-  - pull_request
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        # we want to test our package on several versions of Python
-        python-version: [3.8, 3.9, 3.10]
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
-        # make depends on poetry
-      - name: Install dependencies
-        run: |
-          pip install poetry
-          make install
-      - name: Run linter 
-        run: 
-          make lint
-      - name: Test & publish code coverage
-        uses: paambaati/codeclimate-action@v2.7.4
-        env:
-          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
-        with:
-          coverageCommand: make test-coverage
-          debug: true
+
+runs-on: ubuntu-latest
+
+steps:
+  - uses: actions/checkout@v2
+  - name: setup-python
+    uses: actions/setup-python@v2
+  - name: install1
+    run:  pip install poetry
+  - name: install2
+    run: make install
+  - name: run-linter
+    run:  make lint
