--- a/.github/workflows/hexlet-lint.yml
+++ b/.github/workflows/hexlet-lint.yml
@@ -14,8 +14,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
         # make depends on poetry
       - name: Install dependencies
-        run: |
-          pip install poetry
+        run:
           make install
       - name: Run linter
         run: 
