--- a/.github/workflows/hexlet-lint.yml
+++ b/.github/workflows/hexlet-lint.yml
@@ -13,6 +13,8 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
         # make depends on poetry
+      - name: install1
+        run:  pip install poetry  
       - name: Install dependencies
         run:
           make install
