--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "hexlet-code"
 version = "0.3.0"
 description = ""
 classifiers = []
-repository = [https://github.com/MarfaNikitina/python-project-lvl1]
+repository = ['github.com/MarfaNikitina/python-project-lvl1']
 authors = ["Marfa Nikitina <marfik93@mail.ru>"]
 packages = [
   { include = "brain_games" },
